
5.2a2 -> 5.2a3:
    - jbj: PLD: rpm-pld-autodep: merge and simplify. entirely dysfunctional ...
    - jbj: PLD: rpm-notsc: Don't use rdtsc timing.
    - jbj: PLD: rpm-popt-aliases: Add --downgrade/--norepackage aliases.
    - jbj: PLD: rpm-epoch0: Always add Epoch: 0 to packages.
    - jbj: handle "config(N) = E:V-R" within rpmns.c (but treat as a string).
    - rpm.org: Don't try to create "" directories.
    - rpm.org: Don't bother calculating string sizes manually.
    - rpm.org: memory used by lua gets freed (just remove comment).
    - rpm.org: repeated read config -> free config needs globalLuaState == NULL.
    - rpm.org: Fix buffer overflow on oversized filelist entries(susebz#397006).
    - jbj: rpmdigest: avoid segfault on named pipes and other uglix fauna.
    - jbj: pcre: finalize --with-pcre=internal building.
    - jbj: pcre: punish PLD with internal bloat until the trivial AutoFu exists.
    - jbj: rpmbuild: use anchored patterns for data validation.
    - jbj: move rpmgrep and man page from rpmio/ to tools/ and install.
    - jbj: EVRtuple: eliminate the old EVR parser.
    - jbj: rpmbuild: enumerate all the lexical patterns in parsePreamble().
    - jbj: rpmbuild: enable pattern validation for simple package identifiers.
    - jbj: rpmbuild: add tag data validation pattern checks.
    - jbj: EVRtuple: handle EVR_t opaquely in python labelCompare().
    - jbj: EVRtuple: postpone committing to single "missing" value for now.
    - jbj: EVRtuple: attempt rpmEVRparse() during parseRCPOT().
	no error returns from rpmEVRparse() to trigger the message yet, todo++.
    - jbj: EVRtuple: teach --whatneeds/--needswhat to use EVR_t opaquely.
    - jbj: EVRtuple: add rpmEVR{new,free} creator and destructors.
    - jbj: EVRtuple: mark the old EVRD parser for destruction.
    - jbj: EVRtuple: use the new EVRD pattern parser, reverse the assert check.
    - jbj: EVRtuple: precedence permutation for rpmdsCompare().