@@ -82,9 +82,15 @@ typedef enum rpmParseState_e {
     PART_LAST		= 34+PART_BASE  /*!< */
 } rpmParseState;
 
-#define STRIP_NOTHING             0
-#define STRIP_TRAILINGSPACE (1 << 0)
-#define STRIP_COMMENTS      (1 << 1)
+/** \ingroup rpmbuild
+ * Spec file parser stripping flags.
+ */
+typedef enum rpmStripFlags_e {
+    STRIP_NOTHING	= 0,
+    STRIP_TRAILINGSPACE	= (1 << 0),
+    STRIP_COMMENTS	= (1 << 1),
+    STRIP_NOEXPAND	= (1 << 2)
+} rpmStripFlags;
 
 /*@unchecked@*/
 extern int _rpmbuildFlags;
@@ -183,7 +189,7 @@ extern rpmuint32_t * getBuildTime(void)
  * @param strip		truncate comments?
  * @return		0 on success, 1 on EOF, <0 on error
  */
-int readLine(Spec spec, int strip)
+int readLine(Spec spec, rpmStripFlags strip)
 	/*@globals rpmGlobalMacroContext, h_errno, fileSystem, internalState @*/
 	/*@modifies spec->fileStack, spec->readStack, spec->line, spec->lineNum,
 		spec->lbufPtr,
